# ine-shapefiles-downloader

./: .env.example  .gitignore  CLEAN_VOTES_SUMMARY.md  CLEAN_VOTES_USAGE.md  CROSS_PLATFORM_GUIDE.md  Dockerfile  HOMOLOGATION_IMPLEMENTATION_SUMMARY.md  PIPELINE_GUIDE.md  PIPELINE_UPDATE_SUMMARY.md  PROJECT_README.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  README.md  SHAPEFILE_FIXES_SUMMARY.md  UPDATED_FEATURES.md  diagnose_merge_issue.py  diagnose_party_specific_issue.py  find_correct_shapefiles.py  main.py  pyproject.toml  requirements.txt  run_all.sh  test_all_states_parties.py  test_geometry_cdmx_sonora.py  validate_setup.py  verify_correct_geography.py  verify_shapefile_data.py
analytics/: CLEAN_VOTES_QUICKSTART.md  COLUMN_HOMOLOGATION_GUIDE.md  PIPELINE_FEATURES.md  QUICK_REFERENCE_HOMOLOGATION.md  QUICK_START_UV.md  README.md  check_shapefile_availability.py  demo_clean_votes.ipynb  init_database.py  pyproject.toml  query_database.ipynb  run_pipeline.py
analytics/examples/: auto_infer_example.py  moran_analysis_example.py  process_election_example.py
analytics/src/analytics/: __init__.py
analytics/src/analytics/clean_votes/: README.md  __init__.py  cleaner.py  column_mapper.py  database.py  geometry.py  orchestrator.py  reader.py  utils.py
analytics/utils/: add_geometry_to_existing.py  check_geometry.py
app/: download.py  download_nacional.py  download_peepjf.py
dashboard/: README.md  pyproject.toml
dashboard/.streamlit/: config.toml
dashboard/src/dashboard/: __init__.py  app.py  config.py  kepler_visualization.py  theme.py
dashboard/src/dashboard/api/: __init__.py  main.py
dashboard/src/dashboard/api/models/: __init__.py  requests.py  responses.py
dashboard/src/dashboard/api/routes/: __init__.py  comparison.py  data.py  spatial.py  visualization.py
dashboard/src/dashboard/api/services/: __init__.py  data_service.py  spatial_service.py  visualization_service.py
dashboard/src/dashboard/utils/: __init__.py  api_client.py
dashboard/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_spatial_service.py
ingestion/: README.md  pyproject.toml
ingestion/src/ingestion/: __init__.py  download_nacional.py  download_peepjf.py
ingestion/src/ingestion/utils/: __init__.py  s3_utils.py
shared/config/: __init__.py  estados.py
