[project]
name = "analytics"
version = "0.1.0"
description = "Analytics module - Geospatial operations and trend calculations"
requires-python = ">=3.11,<3.13"
dependencies = [
    "geopandas>=0.14.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "shapely>=2.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "libpysal>=4.9.0",
    "esda>=2.5.0",
    "splot>=1.1.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


