[project]
name = "ingestion"
version = "0.1.0"
description = "Ingestion module - Downloads and standardizes raw electoral data"
requires-python = ">=3.11,<3.13"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "py7zr>=0.20.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "polars>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


